0.12.0.N (Pre-Release):
-----------------------
- Adds 'EXT4_FEATURE_INCOMPAT_ENCRYPT' Support to Ext4 Driver
- Maps deprecated 'HandleProtocol' calls to 'OpenProtocol'
- Drops ineffective attempt to detect timezones
- Fixs issue with disappearing Mouse on x64 Arch
- Fixs Bogus Bootable Windows BIOS Instances
- Loads MemFix on OpenCore Boots if required
  * Enables the Stage 1 Loading Screen on some Classic Macs
- Fixes ESP detection for saving screenshots
  * ESP detection may have sometimes returned 'true' on other locations
- Implements "force_trim" config option
  * Enables 'TRIM' on non-Apple SSDs when booting into Mac OS
- Implements "disable_mac_compat_check" config option
  * Disables Mac OS compatibility checks to allow booting new Mac OS Versions on unsupported Macs
- Implements "disable_amfi" config option
  * Disables the Apple Mobile File Integrity (AMFI) checks in Mac OS
  * Disabling AMFI may further facilitate booting new Mac OS Versions on unsupported Macs
- Implements "protect_mac_nvram" config option
  * Attempts to prevent UEFI Windows from saving certificates to the NVRAM on Macs
  * These certificates damage Apple NVRAM and result in an inability to start Macs up


0.12.0.M (07 Dec 2020):
-----------------------
- Optimises search for graphics capabilities and overall boot speed
- Adds workaround for broken QEMU support in the upstream v0.12.0 release
- Reinstalls GOP from Random Access Memory to provide bootscreen on EFI 1.x devices such as Classic MacPros when running GPUs with strict UEFI 2.x Implementation (Mainly Nvidia)
  * Hence RefindPlus can now provide bootscreen when running any GPU with GOP
  * The bootscreen will also be available to other tools, such as OpenCore, when chain-loaded from RefindPlus.
- Clears buffered key strokes on main menu
  * This prevents immediately booting into a selected option on return from tools such as the UEFI Shell
- Encodes screenshots as PNG files instead of the previous large BMP files