@@ -5,6 +5,8 @@
 - Drops ineffective attempt to detect timezones
 - Fixs issue with disappearing Mouse on x64 Arch
 - Fixs Bogus Bootable Windows BIOS Instances
+- Changes default config filename to config.conf
+  * Retains support for refind.conf
 - Loads MemFix on OpenCore Boots if required
   * Enables the Stage 1 Loading Screen on some Classic Macs
 - Fixes ESP detection for saving screenshots
